--- a/style.css
+++ b/style.css
@@ -33,26 +33,33 @@
     --sticky-top-right: -18rem;
 
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
+
 body {
     font-family: 'Poppins', sans-serif;
     background: var(--color-light);
     color: var(--color-dark);
     overflow-x: hidden;
 }
-.logo{
+
+.logo {
     font-size: 1.7rem;
     font-weight: 600;
     color: #664ED7;
 }
-a{
+
+a {
     color: var(--color-black);
 }
-i,img{
+
+i,
+img {
     cursor: pointer;
 }
+
 .post {
     font-weight: 400;
     color: #141119;
@@ -279,12 +286,12 @@ main .container .left .profile {
     border-radius: var(--card-radius);
     padding: var(--card-padding);
     display: none;
-    background: rgba( 255, 255, 255, 0.75 );
-box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-backdrop-filter: blur( 3px );
--webkit-backdrop-filter: blur( 3px );
-border-radius: 10px;
-border: 1px solid rgba( 255, 255, 255, 0.18 );
+    background: rgba(255, 255, 255, 0.75);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(3px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .left .notification-popup::before {
@@ -307,16 +314,18 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
     margin-bottom: .4rem;
     padding: .6rem 0;
 }
-.left .notification-popup>div:hover{
-    background: rgba( 255, 255, 255, 0.25 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 20px );
-    -webkit-backdrop-filter: blur( 20px );
+
+.left .notification-popup>div:hover {
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
     border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    border: 1px solid rgba(255, 255, 255, 0.18);
     gap: .3rem;
     border-radius: var(--card-radius);
 }
+
 /* ============end of left=============== */
 /* ====================Middle part============= */
 .middle .stories {
@@ -574,7 +583,8 @@ main .container .right {
     cursor: pointer;
     transition: .4s;
 }
-.message:hover{
+
+.message:hover {
     background-color: var(--color-light);
     border-radius: var(--card-radius);
 }
@@ -661,18 +671,20 @@ main .container .right {
     display: none;
 }
 
-.customize-theme .card{
+.customize-theme .card {
     background-color: var(--color-white);
     padding: 3rem;
     border-radius: var(--card-radius);
     width: 50vw;
+    box-shadow: 0 0 .5rem var(--color-black);
 
 }
-.customize-theme  .font-size {
+
+.customize-theme .font-size {
     margin-top: 4rem;
 }
 
-.customize-theme .font-size > div {
+.customize-theme .font-size>div {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -680,17 +692,19 @@ main .container .right {
     padding: var(--search-padding);
     border-radius: var(--card-radius);
 }
-.choose-size{
-background-color: var(--color-secondary);    
-width: 100%;
-height: .3rem;
-margin: 0 1rem;
-display: flex;
-justify-content: space-between;
-align-items: center;
+
+.choose-size {
+    background-color: var(--color-secondary);
+    width: 100%;
+    height: .3rem;
+    margin: 0 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
 }
-.choose-size span{
+
+.choose-size span {
     width: 1rem;
     height: 1rem;
     background-color: var(--color-secondary);
@@ -698,16 +712,16 @@ align-items: center;
     cursor: pointer;
 }
 
-.choose-size .active{
+.choose-size .active {
     background-color: var(--color-dark);
 }
 
 /* --------------color---------- */
-.color{
+.color {
     margin-top: 1rem;
 }
 
-.choose-color{
+.choose-color {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -715,75 +729,91 @@ align-items: center;
     padding: var(--search-padding);
     border-radius: var(--card-radius);
 }
-.choose-color span{
+
+.choose-color span {
     width: 2.2rem;
     height: 2.2rem;
     border-radius: 50%;
     cursor: pointer;
 }
-.choose-color .color-1{
+
+.choose-color .color-1 {
     background-color: yellow;
 }
-.choose-color .color-2{
-    background-color:tomato;
+
+.choose-color .color-2 {
+    background-color: tomato;
 }
-.choose-color .color-3{
+
+.choose-color .color-3 {
     background-color: green;
 }
-.choose-color .color-4{
+
+.choose-color .color-4 {
     background-color: aqua;
 }
-.choose-color .color-5{
+
+.choose-color .color-5 {
     background-color: violet;
 }
-.choose-color .active{
-    border: 5px solid white;
+
+.choose-color .active {
+    border: 3px solid var(--color-primary);
+    box-shadow: 0 0 .21rem var(--color-primary);
 }
 
 /* ===========background color */
-.background{
- margin-top: 1rem;
+.background {
+    margin-top: 1rem;
 }
-.background .choose-bg{
+
+.background .choose-bg {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 1.2rem;
- 
+
 }
-.background .choose-bg > div{
+
+.background .choose-bg>div {
     font-size: 1rem;
     font-weight: bold;
     display: flex;
     align-items: center;
-    padding: var(--search-padding);    
+    padding: var(--search-padding);
     width: 100%;
     cursor: pointer;
     border-radius: .4rem;
 }
-.background .choose-bg > div.active{
-    border: 2px solid black;
+
+.background .choose-bg>div.active {
+    border: 3px solid var(--color-primary);
+    box-shadow: 0 0 .5rem var(--color-primary);
 }
-.bg-1{
+
+.bg-1 {
     background-color: #fff;
     color: black;
 }
 
-.bg-2{
-    background-color: hsl(252,30%,17%);
+.bg-2 {
+    background-color: hsl(252, 30%, 17%);
     color: white;
 }
-.bg-3{
+
+.bg-3 {
     background: black;
     color: white;
 }
-.choose-bg >div span{
+
+.choose-bg>div span {
     width: 2rem;
     height: 2rem;
     border: 2px solid var(--color-gray);
     border-radius: 50%;
     margin-right: 1rem;
 }
+
 
 
 
@@ -921,61 +951,191 @@ align-items: center;
 
 /* MEDIA QUERIES FOR SMALL LAPTOP AND TABLETS */
 @media screen and (max-width:1200px) {
-    .container{
+    .container {
         width: 96%;
     }
+
     main .container {
         grid-template-columns: 5rem auto 30vw;
         gap: 1rem;
     }
-    .left{
+
+    .left {
         width: 5rem;
         z-index: 100;
     }
-main .container .left .profile {
-    display: none;
-}
-main .container .left h3{
-    display: none;
-}
-.left .btn{
-    display: none;
-}
-}
-/* ========MEDIA QUERIES FOR SMALL TABLET AND MOBILE PHONES======= */
-@media screen and (max-width:992px){
-    nav .search-box{
+
+    main .container .left .profile {
         display: none;
     }
-    main .container{
-        grid-template-columns: 0 auto 5rem;
+
+    main .container .left h3 {
+        display: none;
+    }
+
+    .left .btn {
+        display: none;
+    }
+
+    .customize-theme .card {
+        width: 60vw;
+    }
+}
+
+/* ========MEDIA QUERIES FOR SMALL TABLET AND MOBILE PHONES======= */
+@media screen and (max-width:992px) {
+    nav .search-box {
+        display: none;
+    }
+
+    main .container {
+        grid-template-columns: 0 1fr 5rem;
+        margin: 0;
         gap: 0;
     }
-    main .container .left{
+
+    main .container .left {
         grid-column: 3/4;
         right: 0;
         bottom: 0;
         position: fixed;
+        transition: .4s;
+        transition-delay: .5s;
     }
-    .left .notification-popup{
+
+
+    .left .notification-popup {
         position: absolute;
         width: 20rem;
         left: -20rem;
     }
-    .left .notification-popup::before{
+
+
+    .left .notification-popup::before {
         display: block;
         position: absolute;
         top: 1.3rem;
         left: calc(20rem - 0.8rem);
     }
-    main .container .left .sidebar > div h3{
+
+    main .container .left .sidebar>div h3 {
         display: none;
     }
-    .middle{
-        grid-column: 1/3;
+
+    .middle {
+        grid-column: auto/3;
+        padding: 0 1rem;
     }
-    main .container .right{
+
+    .middle .feeds .feed {
+        background-color: var(--color-white);
+    }
+
+    main .container .right {
         display: none;
     }
+
+    .customize-theme .card {
+        width: 90vw;
+        margin-left: 0;
+    }
+
+    .background .choose-bg {
+        gap: 0.6rem;
+
+    }
+
+    .choose-bg>div span {
+        width: 1.5rem;
+        height: 1.5em;
+        margin-right: .5rem;
+    }
+
+    .background .choose-bg>div {
+        font-size: .9rem;
+        padding: .7rem;
+        margin-top: .5rem;
+    }
+
 }
 
+@media screen and (max-width:630px) {
+    nav .search-box {
+        display: none;
+    }
+
+    main .container {
+        grid-template-columns: 0 1fr 5rem;
+        margin: 0;
+        gap: 0;
+    }
+
+    main .container .left {
+        grid-column: 3/4;
+        right: -60px;
+        bottom: 0;
+        position: fixed;
+        transition: .4s;
+        transition-delay: .5s;
+    }
+
+    main .container .left:hover {
+        right: 0;
+        transition-delay: 0s;
+
+    }
+
+    .left .notification-popup {
+        position: absolute;
+        width: 20rem;
+        left: -20rem;
+    }
+
+
+    .left .notification-popup::before {
+        display: block;
+        position: absolute;
+        top: 1.3rem;
+        left: calc(20rem - 0.8rem);
+    }
+
+    main .container .left .sidebar>div h3 {
+        display: none;
+    }
+
+    .middle {
+        grid-column: auto/3;
+        padding: 0 1rem;
+    }
+
+    .middle .feeds .feed {
+        background-color: var(--color-white);
+        max-width: 92vw;
+    }
+
+    main .container .right {
+        display: none;
+    }
+
+    .customize-theme .card {
+        width: 90vw;
+        margin-left: 0;
+    }
+
+    .background .choose-bg {
+        gap: 0.6rem;
+
+    }
+
+    .choose-bg>div span {
+        width: 1.5rem;
+        height: 1.5em;
+        margin-right: .5rem;
+    }
+
+    .background .choose-bg>div {
+        font-size: .9rem;
+        padding: .7rem;
+        margin-top: .5rem;
+    }
+}
