--- a/style.css
+++ b/style.css
@@ -54,10 +54,10 @@ body {
 .logo {
     font-size: 1.7rem;
     font-weight: 600;
-    color: #664ED7;
+    color: var(--color-primary);
 }
 
-a {
+a{
     color: var(--color-black);
 }
 
@@ -73,7 +73,7 @@ img {
 
 .right-now {
     color: var(--color-danger);
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .right-now1 {
@@ -196,7 +196,6 @@ main .container .left .profile {
     background-color: var(--color-white);
     width: 100%;
     display: flex;
-    ;
     align-items: center;
     column-gap: 1rem;
 }
@@ -325,7 +324,6 @@ main .container .left .profile {
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     backdrop-filter: blur(20px);
     -webkit-backdrop-filter: blur(20px);
-    border-radius: 10px;
     /* border: 1px solid rgba(255, 255, 255, 0.18); */
     gap: .3rem;
     border-radius: var(--card-radius);
@@ -453,7 +451,7 @@ main .container .left .profile {
     margin: 1rem 0;
     padding: var(--card-padding);
     border-radius: var(--card-radius);
-    font-size: .7.5rem;
+    font-size: .7rem;
     line-height: 1.5rem;
 }
 
@@ -1065,7 +1063,6 @@ main .container .right {
     nav {
     box-shadow: 0 .4rem .5rem rgba(0, 0, 0, 0.09);  
     }
-    
     .create .btn{
         position: absolute;
         left: 40%;
@@ -1090,13 +1087,51 @@ main .container .right {
 
     .middle {
         grid-column: auto/3;
-        padding: 0 1rem;
+        padding: 0 .61rem;
+    }
+    .middle .create_post{
+        margin-top: .5rem;
+        font-size: .5rem;
+        padding: 0.3rem;  }
+    .container {
+        width: 96%;
     }
 
-    .middle .feeds .feed {
-        background-color: var(--color-white);
-        max-width: 92vw;
+    main .container {
+        width: 100%;
+        grid-template-columns: 0 100% 0;
+        gap: 0;
     }
+    .middle .stories {
+        height: 10rem;
+        width: 100%;
+        gap: .3rem;
+    }
+    .middle .stories .story {
+       
+        width: 100%;
+        font-size: .7rem;
+        text-align: center;
+    }
+    .middle .stories .story .profile-picture{
+        width:2rem;
+        height: 2rem;
+    }
+    .middle .feeds .feed {
+        margin: .9rem 0;
+        font-size: .7rem;
+        line-height: 1.5rem;
+        font-size: 1rem;
+        padding: 0 .4rem;
+    }
+    .feed .photo img{
+        height: 60vh;
+    }
+   .feed .photo .shojib{
+       width: 100%;
+     
+    }
+    
 
      
 }
