--- a/style.css
+++ b/style.css
@@ -54,10 +54,10 @@ body {
 .logo {
     font-size: 1.7rem;
     font-weight: 600;
-    color: #664ED7;
+    color: var(--color-primary);
 }
 
-a {
+a{
     color: var(--color-black);
 }
 
@@ -73,7 +73,7 @@ img {
 
 .right-now {
     color: var(--color-danger);
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .right-now1 {
@@ -196,7 +196,6 @@ main .container .left .profile {
     background-color: var(--color-white);
     width: 100%;
     display: flex;
-    ;
     align-items: center;
     column-gap: 1rem;
 }
@@ -325,7 +324,6 @@ main .container .left .profile {
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     backdrop-filter: blur(20px);
     -webkit-backdrop-filter: blur(20px);
-    border-radius: 10px;
     /* border: 1px solid rgba(255, 255, 255, 0.18); */
     gap: .3rem;
     border-radius: var(--card-radius);
@@ -349,13 +347,17 @@ main .container .left .profile {
     padding: var(--card-padding);
     border-radius: var(--card-radius);
     color: white;
-    font-size: 0.8rem;
     width: 100%;
+    height: 100%;
     position: relative;
     cursor: pointer;
     overflow: hidden;
 }
-
+.story .profile-picture{
+margin: 0 auto;
+width: 5rem;
+height: 5rem;
+}
 .middle .stories .story::before {
     content: "";
     position: absolute;
@@ -453,7 +455,6 @@ main .container .left .profile {
     margin: 1rem 0;
     padding: var(--card-padding);
     border-radius: var(--card-radius);
-    font-size: .7.5rem;
     line-height: 1.5rem;
 }
 
@@ -1066,6 +1067,7 @@ main .container .right {
     box-shadow: 0 .4rem .5rem rgba(0, 0, 0, 0.09);  
     }
     .create .btn{
+       padding: .6rem 1rem;
         position: absolute;
         left: 40%;
         transform: translate(-50%,-50%);
@@ -1106,25 +1108,47 @@ main .container .right {
         height: 10rem;
         width: 100%;
         gap: .3rem;
-    }
-    .middle .stories .story {
-       
-        width: 100%;
         font-size: .7rem;
         text-align: center;
     }
+    .middle .stories .story-5{
+        display:none;
+    }
+
     .middle .stories .story .profile-picture{
         width:2rem;
         height: 2rem;
     }
     .middle .feeds .feed {
-        margin: .9rem 0;
+        margin: 1rem 0;
         font-size: .7rem;
         font-size: 1rem;
-        padding: 0 .4rem;
+        padding: .4rem;
     }
     .feed .photo img{
         height: 60vh;
+    }
+    .customize-theme .card {
+        width: 100vw;
+        margin-left: 0;
+        padding: 0.3rem 1rem;
+    }
+
+    .background .choose-bg {
+        gap: 0.6rem;
+
+    }
+
+    .choose-bg>div span {
+        width: 1.5rem;
+        height: 1.5em;
+        margin-right: .5rem;
+    }
+
+    .background .choose-bg>div {
+        font-size: .9rem;
+        /* padding: .7rem; */
+        margin-top: .5rem;
     }
 
      
